--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
+    <link rel="icon" type="image/x-icon" href="images/furniture-logo.png" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
