--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Furnics Furniture Store</title>
     <meta charset="utf-8" />
@@ -27,14 +27,10 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
   </head>
-  <body
-    class="bg-body"
-    data-bs-spy="scroll"
-    data-bs-target="#navbar"
-    data-bs-root-margin="0px 0px -40%"
-    data-bs-smooth-scroll="true"
-    tabindex="0"
-  >
+  <body>
+    class="bg-body" data-bs-spy="scroll" data-bs-target="#navbar"
+    data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0"
+    >
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
       <symbol
         id="search"
@@ -174,7 +170,7 @@
       <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="images/main-logo.png" class="logo" />
+            <img alt="furnics" src="images/main-logo.png" class="logo" />
           </a>
           <button
             class="navbar-toggler d-flex d-lg-none order-3 p-2"
@@ -197,7 +193,7 @@
           >
             <div class="offcanvas-header px-4 pb-0">
               <a class="navbar-brand" href="index.html">
-                <img src="images/main-logo.png" class="logo" />
+                <img alt="furnics src="images/main-logo.png" class="logo" />
               </a>
               <button
                 type="button"
