changed Shop in the navbar to Products

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="js/modernizr.js"></script>
   </head>
   <body>
-    class="bg-body" data-bs-spy="scroll" data-bs-target="#navbar"
+    <class="bg-body" data-bs-spy="scroll" data-bs-target="#navbar"
     data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0"
     >
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
@@ -248,7 +248,7 @@
                     data-bs-toggle="dropdown"
                     aria-haspopup="true"
                     aria-expanded="false"
-                    >Shop</a
+                    >Products</a
                   >
                   <ul
                     class="dropdown-menu list-unstyled"
